src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

input {
    outline: none;
    border: none;
}

ul {
    list-style: none;
}

.glass-filter,
.glass-overlay,
.glass-specular {
    position: absolute;
    inset: 0;
    border-radius: inherit;
}

.glass-filter {
    z-index: 1;
    backdrop-filter: blur(4px);
    filter: url(#glass-distortion) saturate(120%) brightness(1.25);
}

.glass-overlay {
    z-index: 2;
    background: #ffffff11;
}

.glass-specular {
    z-index: 3;
    box-shadow: inset 1px 1px 1px #ffffffaa;
}

body {
    font-family: 'Inter', sans-serif;
    display: grid;
    place-content: center;
    min-height: 100vh;
    color: #fff;
    /* background-image: linear-gradient(60deg, #080808, #2200ff); */
    background-color: #130f40;
    background-image: linear-gradient(315deg, #130f40 0%, #000000 74%);
}

article {
    display: flex;
    background-color: #85808055;
    border-radius: 1rem;
    backdrop-filter: blur(10px);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}

.content {
    position: relative;
    width: min(85.714vw, 105rem);
    border-radius: 1.2rem;
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2), 0 10px 20px rgba(187, 155, 255, 0.5);
    display: grid;
    grid-template-areas:
        "aside weather"
        "aside highlights";
    grid-template-columns: 28rem 1fr;
    column-gap: 2rem;
    padding: clamp(1rem, 2.4vh, 1.5rem);

    aside {
        grid-area: aside;
        /* background-image: url(../images/night/clear.avif); */
        filter: contrast(1.1) drop-shadow(#fff 0px 14px 55px);
        background-size: cover;
        background-repeat: no-repeat;
        background-position: left bottom;
        opacity: 0.8;
        border-radius: inherit;
        padding: inherit;
        border: 2px solid #ffffff22;
        box-shadow: rgba(175, 175, 181, 0.6) 0px 30px 60px -12px inset, rgba(154, 154, 154, 0.3) 0px 18px 36px -18px inset;
        display: flex;
        flex-direction: column;
        row-gap: .8rem;

        .wrapper {
            display: contents;
        }

        input {
            background: linear-gradient(173deg, #23272f22 0%, #14161a22 100%);
            backdrop-filter: blur(10px);
            color: #fff;
            width: 100%;
            padding: 1rem;
            border-radius: 1.2rem;
            font-size: clamp(1rem, 1.92vh, 1.2rem);
            transition: .3s;
            box-shadow: inset 8px 8px 8px #cbced155,
                inset -8px -8px 8px #ffffff22;

            &:hover {
                box-shadow:
                    inset 0px 0px 10px #BFC3C933,
                    inset 0px 0px 10px #101A8888,
                    0px 0px 100px #101A8888,
                    0px 0px 100px #BFC3C933;
            }

            &::placeholder {
                color: #fff;
                font-family: 'Inter', sans-serif;
                font-weight: 300;
                transition: all 0.3s ease;

            }

            &:focus::placeholder {
                color: #999;
            }

            .card-logo {
                position: absolute;
            }
        }

        &>img {
            align-self: center;
            max-width: clamp(9rem, 19.2vh, 12rem);
            max-height: clamp(5rem, 12.8vh, 8rem);
            filter: drop-shadow(#000 0px 44px 55px);
        }
    }

}

.info {
    row-gap: clamp(0.2rem, 1.28vh, 0.8rem);
    padding: clamp(1rem, 2.4vh, 1.5rem);
    flex-direction: column;

    h3 {
        text-shadow: 0 4px 12px rgba(233, 223, 255, 0.8);
        font-size: clamp(1rem, 2.24vh, 1.4rem);
        font-weight: 200;
    }

    .desc {
        font-size: clamp(1.15rem, 2.25vh, 1.4rem);
        font-weight: 600;
    }

    .temperature {
        font-size: clamp(1.2rem, 2.56vh, 1.6rem);
        font-weight: 600;
    }

    .date-time {
        font-size: clamp(1rem, 2vh, 1.25rem);
        font-weight: 300;
    }
}

.forecast {
    padding: clamp(1rem, 2.4vh, 1.5rem);
    row-gap: clamp(0.2rem, 1.28vh, 0.6rem);
    flex-direction: column;

    h3 {
        text-shadow: 0 4px 12px rgba(233, 223, 255, 0.8);
        font-size: clamp(1rem, 2.08vh, 1.3rem);
        font-weight: 600;
    }

    .day {
        display: grid;
        grid-template-areas:
            "icon date"
            "icon prognose";
        grid-template-columns: clamp(3.5rem, 8vw, 6.5rem) 1fr;
        column-gap: clamp(0.2rem, 1.28vh, 0.6rem);
        align-items: center;

        img {
            font-size: clamp(.8rem, 1.95vh, 1.22rem);
            max-height: clamp(3rem, 6.4vh, 4rem);
            grid-area: icon;
            justify-self: center;
            filter: drop-shadow(#000 0px 24px 55px);
        }

        .date {
            font-weight: 600;
            grid-area: date;
            align-self: end;
        }

        .prognose {
            font-weight: 300;
            grid-area: prognose;

        }
    }
}

.input-block {
    position: relative;

    i {
        font-size: clamp(1rem, 2.4vh, 1.5rem);
        position: absolute;
        right: clamp(0.5rem, 1.28vh, 0.94rem);
        top: 50%;
        transform: translateY(-50%);
        color: #fff;
        z-index: 1;
    }
}

.highlights {
    grid-area: highlights;
}

.item {
    position: relative;
    z-index: 4;
}

.description {
    font-size: 3rem;
    margin-bottom: 1em;
}

.graph-wrapper {
    justify-content: center;
    column-gap: clamp(1rem, 2.4vh, 2.5rem);
    justify-content: space-around;
    padding: clamp(1rem, 2.4vh, 1.5rem);

    .svg-wrapper {
        position: relative;
    }

    gauge-indicator {
        /* width: clamp(6rem, 14.6vh, 8.5rem); */
        width: 8.5rem;
        text-align: center;
        font-family: sans-serif;
        color: #fff;
        display: flex;
        flex-direction: column;
        row-gap: clamp(0.2rem, 1.15vh, 0.8rem);
    }

}

.suggestions-container {
    margin-top: .3rem;
    position: absolute;
    z-index: 2;
    display: flex;
    flex-direction: column;
    width: 100%;
    row-gap: .4rem;

    div {
        display: flex;
        flex-direction: column;
        row-gap: .4rem;
    }

    li {
        opacity: 0;
        transform: translateY(-1.2rem);
        display: flex;
        justify-content: space-between;
        transition: .3s;
        background-color: #ffffff22;
        padding: .8rem;
        border-radius: 1.2rem;
        backdrop-filter: blur(5px);
        box-shadow: inset 8px 8px 8px #cbced155,
            inset -8px -8px 8px #ffffff25,
            0px 50px 100px -20px rgba(234, 234, 255, 0.573),
            0px 30px 60px -30px rgba(255, 254, 254, 0.887);

        &.show {
            opacity: 1;
            transform: translateY(0);
        }


        &.hide {
            opacity: 0;
            transform: translateY(-20px);
        }

        &:hover {
            background-color: #00000022;
        }

    }
}

.weather {
    padding-top: 1.2rem;
    grid-area: weather;
    height: 45vh;
    perspective: 5400px;
    perspective-origin: 50% 50%;
    touch-action: pan-y;
    overflow: hidden;
    display: grid;
    justify-items: center;

    h2 {
        justify-self: start;
        font-size: clamp(1.4rem, 2.6vh, 1.65rem);
        font-weight: 300;
        text-shadow: 0 4px 12px rgba(233, 223, 255, 0.8);
        line-height: 1.5;

        p {
            margin-top: .8rem;
            font-size: clamp(1rem, 2.2vh, 1.4rem);
            font-weight: 600;
            letter-spacing: .06em;
        }
    }

    .weather-inner {
        padding: 1rem;
        width: 620px;
        height: 18.8rem;
        position: relative;
        transform-style: preserve-3d;
        user-select: none;
        transform: rotateY(20deg);
        cursor: grab;
    }

    forecast-card {
        position: absolute;
        inset: 0;
        padding: clamp(1rem, 2.4vh, 1.5rem);
        border-radius: 1.1rem;
        width: 18rem;
        aspect-ratio: 1;
        background-image: linear-gradient(145deg, #130f4088 30%, #ffffff15 100%);
        backdrop-filter: blur(10px);
        -webkit-backdrop-filter: blur(10px);
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        row-gap: 1.2rem;
        font-size: clamp(1.2rem, 2.4vh, 1.4rem);
        backface-visibility: hidden;
        transition: .6s;
        border: 1px solid #ffffff22;

        &:hover {
            box-shadow: 0 8px 30px rgba(187, 155, 255, 0.3), 0 4px 12px rgba(233, 223, 255, 0.4);
        }

        p {
            font-size: 1.65rem;
            text-shadow: 0 4px 12px rgba(233, 223, 255, 0.8);
        }

        .card-logo {
            filter: drop-shadow(#fff 0px 24px 55px);
            max-height: clamp(3rem, 6.4vh, 4.8rem);
        }

    }

}

.highlights {
    height: 50vh;
    padding: 1.5rem;

    h2 {
        justify-self: start;
        grid-column: 1 / -1;
        text-shadow: 0 4px 12px rgba(233, 223, 255, 0.8);
        font-size: clamp(1.2rem, 2.6vh, 1.65rem);
        font-weight: 600;
    }

    .wrapper {
        height: 80%;
        margin-top: 1.5rem;
        display: flex;
        justify-content: space-between;
        align-items: center;
        column-gap: 1rem;
    }

    article {
        flex-basis: 300px;
        height: auto;
        min-height: 250px;
        flex-direction: column;
        justify-content: center;
        row-gap: .8rem;
        padding: 1.2rem;
        border: 1px solid #ffffff22;
        box-shadow: rgba(209, 209, 238, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;

        p {
            font-size: clamp(1.1rem, 1.167vw, 1.4rem);
            font-weight: 300;
        }

    }
}

@media (max-width: 1305px) {
    .content {
        width: 100vw;
    }
}

@media (max-width: 900px) {
    .content aside {
        background-position: center bottom;

        .wrapper {
            display: flex;
            column-gap: 1.2rem;
            flex-basis: 10%;
        }

        .info,
        .forecast {
            flex-basis: 50%;
        }
    }

    .content {
        grid-template-areas:
            "aside"
            "weather"
            "highlights";
        grid-template-columns: 1fr;
        row-gap: 2rem;
    }

    .weather {
        height: auto;
    }
}

@media (max-width: 800px) {
    .highlights {
        padding: 0;

        .wrapper {
            align-items: start;
        }
    }

}

@media (max-width: 580px) {
    .content aside {
        .wrapper {
            display: contents;
        }
    }

    .highlights {
        height: 580px;

        .wrapper {
            flex-wrap: wrap;
            column-gap: 0.5rem;
            row-gap: 0.8rem;

            article {
                flex-basis: 48%;
            }
        }
    }

}

